oven session is finished

--- a/products.html
+++ b/products.html
@@ -986,7 +986,7 @@
                                                 </div>
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Preparation Line</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
-                                                    <h4>Cutter Mixture</h4>
+                                                    <h4>Cutter Mixer</h4>
                                                     <p></p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
@@ -1190,7 +1190,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Bakery Ovens</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat zones.</p>
+                                                    <p>Electric Bakery & Pizza oven <br> Single /DUBLE /TRIPLE deck <br>Firestone cooking <br>Interior lighting <br> Body stainless steel <br> Capacity: 6 pizza 33CM</p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aBakery%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1205,8 +1205,8 @@
                                                 </div>
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
-                                                    <h4>Menumaster Ovens</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat zones.</p>
+                                                    <h4>Menu master Ovens</h4>
+                                                    <p>Gas supply with safety valves <br>Firestone cooking <br>Interior lighting <br>stainless steel and coated sheet <br>Capacity: 4 pizza 33CM <br></p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aMenumaster%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1222,7 +1222,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Pizza Ovens</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat zones.</p>
+                                                    <p>Capacity: /4x4 /6 /8 pizza 33CM <br> Firestone cooking <br>Interior lighting <br>stainless steel and coated sheet</p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aPizza%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1238,7 +1238,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Rational Ovens</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat zones.</p>
+                                                    <p></p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aRational%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1254,7 +1254,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Rotary Oven</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat zones.</p>
+                                                    <p>temperature range:room temperature-400℃ <br>production:50kg/h（e.g:bread) <br>grill size:610*465*1450mm <br>grill layers:16 layers×1=16tray <br> material:stainless steel</p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aRotary%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1270,7 +1270,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Unox Ovens</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat zones.</p>
+                                                    <p>Commercial name : BAKERTOP <br> Power supply : Electric <br> Type of control : PLUS <br>Number of trays : 6 <br> ray size : 600x400</p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aUnox%20Ovens" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1288,7 +1288,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Menumaster Combi Microwave</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat .</p>
+                                                    <p>Commercial name : CHEFTOP <br> Power supply : Electric <br>Type of control : PLUS <br>Number of trays : 7</p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aMenumaster%20Combi%20Microwave" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1304,7 +1304,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Gas Rotating Pizza Oven</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat.</p>
+                                                    <p></p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aGas%20Rotating%20Pizza%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1320,7 +1320,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Gas Pizza Oven</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat zones.</p>
+                                                    <p>1 Deck electric pizza oven  <br>Temp.Range : 0c-500 c</p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aGas%20Pizza%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1335,8 +1335,8 @@
                                                 </div>
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
-                                                    <h4>Rational iCombi Pro XS</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat  .</p>
+                                                    <h4>Rational Icompi Pro XS</h4>
+                                                    <p>601/101/201/202 ( GAS AND ELECTRIC )</p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aRATIONAL%20iCombi%20Pro-XSs" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1352,7 +1352,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Restoitalia TR line</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat zones.</p>
+                                                    <p></p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aRestoitalia%20TR%20line" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1368,7 +1368,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Unox Bakerlux Combi Oven</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat.</p>
+                                                    <p>Commercial name : BAKERLUX <br>Power supply : Gas <br>Type of control : MANUAL <br>Number of trays : 6 <br>Tray size : 600x400</p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aUnox%20Bakerlux%20Combi%20Ovens" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1384,7 +1384,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Unox Manual Gas Combi Oven</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat zones.</p>
+                                                    <p>Commercial name : BAKERTOP <br>Power supply : Gas <br>Type of control : PLUS <br>Number of trays : 6 <br>Tray size : 600x400</p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aUnox%20Manual%20Gas%20Combi%20Ovens" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
@@ -1400,7 +1400,7 @@
                                                 <!-- <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Oven</div> -->
                                                 <div class="p-4 border border-secondary border-top-0 rounded-bottom height-set d-flex flex-column justify-content-between">
                                                     <h4>Unox Cheftop Combi Oven</h4>
-                                                    <p>They efficiently handle high volume with conveyor belts moving products through heat zones.</p>
+                                                    <p>Commercial name : CHEFTOP <br>Power supply : Gas <br>Type of control : PLUS <br>Number of trays : 10</p>
                                                     <div class="d-flex justify-content-center pb-2">
                                                         <!-- <p class="text-dark fs-5 fw-bold mb-0">$00</p> -->
                                                         <a href="https://wa.me/+971582908151/?text=Hi,I%20want%20to%20know%20more%20about%20%0aUnox%20Cheftop%20Combi%20Oven" class="btn border border-secondary rounded-pill px-3 text-primary" ><i class="fa-brands fa-whatsapp me-2 text-primary"></i> Connect</a>
