--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#fff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,
                                  maximum-scale=1.0, user-scalable=no">
-  <title>alosoolaudit.com</title>
+  <title>fit4kitchen.in</title>
   <style>/* Copyright 2017 The Chromium Authors
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
@@ -6487,7 +6487,7 @@ document.addEventListener('DOMContentLoaded', onDocumentLoad);
           <span jsselect="heading" jsvalues=".innerHTML:msg" jstcache="9">This site can’t be reached</span>
           <a id="error-information-button" class="hidden" onclick="toggleErrorInformationPopup();" jstcache="0"></a>
         </h1>
-        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1"><strong jscontent="hostName" jstcache="22">alosoolaudit.com</strong>’s <abbr id="dnsDefinition" jstcache="0">DNS address</abbr> could not be found. Diagnosing the problem.</p>
+        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1"><strong jscontent="hostName" jstcache="22">fit4kitchen.in</strong>’s <abbr id="dnsDefinition" jstcache="0">DNS address</abbr> could not be found. Diagnosing the problem.</p>
         <!--The suggestion list and error code are normally presented inline,
           in which case error-information-popup-* divs have no effect. When
           error-information-popup-container has the use-popup-container class, this
@@ -6564,7 +6564,7 @@ document.addEventListener('DOMContentLoaded', onDocumentLoad);
     <!-- Show details when hovering over the icon, in case the details are
          hidden because they're too large. -->
     <div class="icon" jstcache="0"></div>
-    <div id="sub-frame-error-details" jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1"><strong jscontent="hostName" jstcache="22">alosoolaudit.com</strong>’s <abbr id="dnsDefinition" jstcache="0">DNS address</abbr> could not be found. Diagnosing the problem.</div>
+    <div id="sub-frame-error-details" jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1"><strong jscontent="hostName" jstcache="22">fit4kitchen.in</strong>’s <abbr id="dnsDefinition" jstcache="0">DNS address</abbr> could not be found. Diagnosing the problem.</div>
   </div>
 
   <div id="offline-resources" jstcache="0">
@@ -6574,4 +6574,4 @@ document.addEventListener('DOMContentLoaded', onDocumentLoad);
   </div>
 
 
-<script jstcache="0">var loadTimeDataRaw = {"details":"Details","errorCode":"DNS_PROBE_POSSIBLE","fontfamily":"\"sans\", Arial, sans-serif","fontfamilyMd":"Roboto, \"sans\", Arial, sans-serif","fontsize":"75%","heading":{"hostName":"alosoolaudit.com","msg":"This site can’t be reached"},"hideDetails":"Hide details","iconClass":"icon-generic","language":"en","reloadButton":{"msg":"Reload","reloadUrl":"http://alosoolaudit.com/"},"suggestionsDetails":[],"suggestionsSummaryList":[],"summary":{"failedUrl":"http://alosoolaudit.com/","hostName":"alosoolaudit.com","msg":"\u003Cstrong jscontent=\"hostName\">\u003C/strong>’s \u003Cabbr id=\"dnsDefinition\">DNS address\u003C/abbr> could not be found. Diagnosing the problem."},"textdirection":"ltr","title":"alosoolaudit.com"};</script></body></html>
+<script jstcache="0">var loadTimeDataRaw = {"details":"Details","errorCode":"DNS_PROBE_POSSIBLE","fontfamily":"\"sans\", Arial, sans-serif","fontfamilyMd":"Roboto, \"sans\", Arial, sans-serif","fontsize":"75%","heading":{"hostName":"fit4kitchen.in","msg":"This site can’t be reached"},"hideDetails":"Hide details","iconClass":"icon-generic","language":"en","reloadButton":{"msg":"Reload","reloadUrl":"http://fit4kitchen.in/"},"suggestionsDetails":[],"suggestionsSummaryList":[],"summary":{"failedUrl":"http://fit4kitchen.in/","hostName":"fit4kitchen.in","msg":"\u003Cstrong jscontent=\"hostName\">\u003C/strong>’s \u003Cabbr id=\"dnsDefinition\">DNS address\u003C/abbr> could not be found. Diagnosing the problem."},"textdirection":"ltr","title":"fit4kitchen.in"};</script></body></html>
