--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-md-12 col-lg-7">
                         <h4 class="mb-3" style="color:  #2E2538;">Smart Appliances and Technology</h4>
-                        <h1 class="mb-5 display-3 " style="color:#DCB342 ;">The kitchen is a Multifunctional Space</h1>
+                        <h1 class="mb-5 display-3 " style="color:#DCB342 ;">Here is the solution for all your Commercial Kitchen Equipments Concerns.</h1>
                         <div class="position-relative mx-auto">
                            <a href="contact.html"><button class="bt form-control border-2 b w-75 py-3 px-4 rounded-pill btn btn-primary border-2 bg-primary py-3 px-4 position-absolute rounded-pill text-white "
                             type="submit" class="" style="top: 0; right: 25%;">Contact Us</button></a> <br>
@@ -616,8 +616,8 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
-                            <h4 class="text-light mb-3">Why People Like us!</h4>
-                            <p class="mb-4">Discover our showroom, where tech meets style. Find kitchen essentials and laundry must-haves blending functionality and flair to suit every need.</p>
+                            <h4 class="text-light mb-3">Why choose us!</h4>
+                            <p class="mb-4">We ensure Innovative products and Instant Services all times.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
