--- a/products.html
+++ b/products.html
@@ -1672,8 +1672,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-item">
-                        <h4 class="text-light mb-3">Why People Like us!</h4>
-                        <p class="mb-4">Discover our showroom, where tech meets style. Find kitchen essentials and laundry must-haves blending functionality and flair to suit every need.</p>
+                        <h4 class="text-light mb-3">Why choose us!</h4>
+                        <p class="mb-4">We ensure Innovative products and Instant Services all times.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
